--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -87,6 +87,7 @@ $sp-after: (
   p: $sp-unit * 3,
   muted: $sp-unit * 2,
   small: $sp-unit * 1,
+  small--dense: $sp-unit * 2,
   default-text: $sp-unit
 );
 
